# thamer-immortal-protocol

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  install.sh  main.py  requirements-dev.txt
api/: Dockerfile  requirements.txt  server.py  websocket.py
config/: secure_config.py
core/: Cargo.toml  Dockerfile
core/src/: main.rs
core/src/consciousness/: mod.rs
dashboard/: Dockerfile  app.js  index.html  style.css
documentation/: API_DOCUMENTATION.md  DEVELOPER_GUIDE.md  USER_GUIDE.md
intelligence/: Dockerfile  behavioral_analyzer.py  brain.py  deep_learning.py  forensics_engine.py  nlp_engine.py  requirements.txt  threat_detection.py
response/: autonomous_response.py
security/: authentication.py  encryption.py  firewall.py  geoip_blocker.py  packet_filter.py  rate_limiter.py
sensors/: Dockerfile  advanced_monitoring.py  network_monitor.py  requirements.txt  system_monitor.py
tests/: __init__.py  conftest.py  requirements.txt  test_core.py  test_intelligence.py  test_security.py
